--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       status.textContent = "Downloading...";
 
       try {
-        const response = await fetch("http://localhost:3000/download", {
+        const response = await fetch("https://auto-downloader-frontend.onrender.com/download", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ fileUrl: link })
