--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Auto Downloader</title>
+  <title>Auto Downloader...</title>
   <style>
     body { font-family: sans-serif; padding: 2rem; background: #f4f4f4; }
     .container { max-width: 600px; margin: auto; background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
@@ -49,3 +49,4 @@
   </script>
 </body>
 </html>
+
